--- a/src/index.css
+++ b/src/index.css
@@ -16,16 +16,25 @@ body {
   scrollbar-width: none;     /* Firefox */
 }
 
-@keyframes rotateInfinite {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* Recipe card */ 
+.card {
+ width: 100%;
+ height: 100%;
+ border-radius: 30px;
+ background: #0E0D13;
+ box-shadow: 15px 15px 30px rgb(25, 25, 25);
+ border-bottom-left-radius: 2px;
+ border-bottom-right-radius: 10px;
+ border-bottom: 1px solid #FFD230;
 }
 
-.rotate-infinite {
-  animation: rotateInfinite 5s linear infinite;
+.aboutBox {
+ border-radius: 5px;
+ background: #0E0D13;
+ box-shadow: 15px 15px 30px rgb(25, 25, 25);
+ padding: 10px;
+ border-bottom-right-radius: 10px;
+ border-bottom: 1px solid #FFD230;
 }
+
 
