Add CategoryCard, TrendingRecipeCard, and Favroite components; enhance Home and CreateRecipe pages with new features and styling

--- a/src/index.css
+++ b/src/index.css
@@ -30,11 +30,41 @@ body {
 
 .aboutBox {
  border-radius: 5px;
- background: #0E0D13;
+ background: linear-gradient(to right, #0E0D13, #1d1b27);
  box-shadow: 15px 15px 30px rgb(25, 25, 25);
  padding: 10px;
  border-bottom-right-radius: 10px;
  border-bottom: 1px solid #FFD230;
 }
+
+/* custom scrollbar */
+.hide-scrollbar::-webkit-scrollbar {
+  display: none; /* hide scrollbar (still scrollable) */
+}
+
+.custom-scrollbar::-webkit-scrollbar {
+  height: 8px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+  background: #1e293b;
+  border-radius: 10px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background: #64748b;
+  border-radius: 10px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+  background: #94a3b8;
+}
+
+/* Firefox */
+.custom-scrollbar {
+  scrollbar-width: thin;
+  scrollbar-color: #64748b #1e293b;
+}
+
 
 
