--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,17 @@
 @import "tailwindcss";
 
 body {
-    background-color: #1F1E2E;
+    background: linear-gradient(135deg, #0f172a, #1e293b, #334155, #0f172a);
     color: #FFFFFF;
 }
 
-/* Hide scrollbar for Chrome, Safari and Opera */
 .scrollbar-hide::-webkit-scrollbar {
   display: none;
 }
 
-/* Hide scrollbar for IE, Edge and Firefox */
 .scrollbar-hide {
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;     /* Firefox */
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 
 /* Recipe card */ 
@@ -21,25 +19,23 @@ body {
  width: 100%;
  height: 100%;
  border-radius: 30px;
- background: #0E0D13;
- box-shadow: 15px 15px 30px rgb(25, 25, 25);
+ background: #0b1221;
+ box-shadow: 5px 5px 15px rgb(25, 25, 25);
  border-bottom-left-radius: 2px;
  border-bottom-right-radius: 10px;
  border-bottom: 1px solid #FFD230;
 }
 
 .aboutBox {
- border-radius: 5px;
- background: linear-gradient(to right, #0E0D13, #1d1b27);
- box-shadow: 15px 15px 30px rgb(25, 25, 25);
- padding: 10px;
- border-bottom-right-radius: 10px;
- border-bottom: 1px solid #FFD230;
+ border-radius: 8px;
+ background: linear-gradient(to right, #0F172B, #1C283C);
+ box-shadow: 5px 5px 15px #10182B;
+ border-bottom-right-radius: 15px;
+ border-bottom: 2px solid #44546C;
 }
 
-/* custom scrollbar */
 .hide-scrollbar::-webkit-scrollbar {
-  display: none; /* hide scrollbar (still scrollable) */
+  display: none;
 }
 
 .custom-scrollbar::-webkit-scrollbar {
@@ -60,7 +56,6 @@ body {
   background: #94a3b8;
 }
 
-/* Firefox */
 .custom-scrollbar {
   scrollbar-width: thin;
   scrollbar-color: #64748b #1e293b;
